--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -10,12 +10,12 @@
     </div>
     <div class="row">
       <div class="col-5">
-         <img src="/assets/img/Acheron/post/Acheron_post1.png" alt="" width="100%">
+         <img src="https://firebasestorage.googleapis.com/v0/b/project-web-2-2.appspot.com/o/assets%2Fimg%2FAcheron%2Fpost%2FAcheron_post1.png?alt=media" alt="" width="100%">
          <h3><span>Acheron </span>— A drifter claiming to be a Galaxy Ranger. Her true name is unknown, and she walks the cosmos alone, carrying with her a long sword.
           Though aloof and taciturn, her blade flicks out like lashing lightning. And yet, she always strikes with her scabbard, never drawing the sword free.</h3>
       </div>
       <div class="col-7">
-        <img src="/assets/img/Kafka/post/Kafka_post5.jpg" alt="" width="112%">
+        <img src="https://firebasestorage.googleapis.com/v0/b/project-web-2-2.appspot.com/o/assets%2Fimg%2FKafka%2Fpost%2FKafka_post5.jpg?alt=media" alt="" width="112%">
         <h3><span>Kafka </span>— A member of the Stellaron Hunters who is calm, collected, and beautiful. Her record on the wanted list of the Interastral Peace Corporation only lists her name and her hobby.
             People have always imagined her to be elegant, respectable, and in pursuit of things of beauty even in combat.</h3>
       </div>
