Update all files

--- a/src/app/components/signin-or-signup/signin-or-signup.component.scss
+++ b/src/app/components/signin-or-signup/signin-or-signup.component.scss
@@ -63,7 +63,7 @@
         height: 600px;
         border-radius: 45px;
         background-size: cover;
-        background-image: url("/assets/img/Acheron/post/Acheron_post1.png");
+        background-image: url("https://firebasestorage.googleapis.com/v0/b/project-web-2-2.appspot.com/o/assets%2Fimg%2FAcheron%2Fpost%2FAcheron_post1.png?alt=media");
         background-repeat: no-repeat;
         background-position: center center;
         .overlay {
