--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -12,6 +12,19 @@
         object-fit: cover;
         object-position: center top;
     }
+    display: flex;
+    justify-content: center;
+        p {
+            width: 100%;
+            height: 40vh;
+            font-size: 18px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: #777; /* Adjust the color as needed */
+            background-color: #F9F9FC;
+            border-radius: 30px;
+        }
  }
  
  .icon-profile {
