Update all files

--- a/src/app/components/ranking/ranking.component.html
+++ b/src/app/components/ranking/ranking.component.html
@@ -24,7 +24,7 @@
         <img [src]="item.picture" alt="">
         <div class="card-title">
           <div class="icon">
-            <span>{{item.first_name}}</span>
+            <span>{{item.full_name}}</span>
             <div class="icon-img">
               <img [src]="item.icon" alt="Post Image" />
             </div>
