--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -3,7 +3,7 @@
         <span>FaceMash</span>
     </div>
     <div class="nav-right">
-        <button mat-flat-button (click)="home()" [ngClass]="{'active-icon': isButtonActive('/')}">Home</button>
+        <button mat-flat-button (click)="home()">Home</button>
         <button mat-flat-button (click)="vote()" [ngClass]="{'active-icon': isButtonActive('/vote')}">Vote</button>
         <button mat-flat-button (click)="ranking()" [ngClass]="{'active-icon': isButtonActive('/ranking')}">Ranking</button>
         <button mat-flat-button (click)="profile()" [ngClass]="{'active-icon': isButtonActive('/profile') || isButtonActive('/edit-profile')}">My Profile</button>
