--- a/src/app/components/ranking/ranking.component.scss
+++ b/src/app/components/ranking/ranking.component.scss
@@ -1,291 +1,279 @@
-.container{
-    width: 100%;
-    margin-top: 4rem;
-    & p{
-        font-size: 30px;
-        text-align: left;
-        font-size: 45px;
-    }
-}
-.title{
+.container {
+  width: 100%;
+  margin-top: 4rem;
+  & p {
+    font-size: 30px;
+    text-align: left;
+    font-size: 45px;
+  }
+  .title {
     width: 100%;
     display: flex;
     justify-content: center;
-    & .title-ranking{
-        width: 90%;
-        & hr{
-            width: 100%;
-        }
-    }
-    & .ranking{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-   
-}
-hr{
-    border: 1.5px solid #b5b5b5;
-    margin-top: 0.5rem;
-}
-.col-7{
-    & .champ-card-ranking{
-        display: flex;
-        justify-content: center;
-        align-items: center;
+    .title-ranking {
+      width: 90%;
+      hr {
         width: 100%;
-        border-radius: 30px;
-        margin-top: 1.25rem;
-        & .champ-card-head{
-            width: 660px;
-            background-color: #F9F9FC;
-            border-radius: 30px;
-            display: flex;
-            overflow: hidden;
-            position: relative;
-            transition: transform 0.5s ease, box-shadow 0.3s ease;
-            cursor: pointer;
-    
-            & h1{
-                padding-left: 3rem;
-            }
-            &:hover {
-              transform: scale(1.05);
-              box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3); 
-            }
-    
-        }
-        & img{
-            border-radius: 30px;
-            width: 550px;
-            height: 230px;
-            object-fit: cover;
-            aspect-ratio: 16/9;
-        }
-    
-        & .champ-card-title{
-            width: 100%;
-            & .champ-icon{
-                display: flex;
-                justify-content: flex-end;
-                align-items: center;
-                margin-top: 0.5rem;
-                margin-right: 1.5rem;
-                & span{
-                    font-size: 16px;
-                    font-weight: 500;
-                    margin-right: 0.5rem;
-                }
-                & img{
-                    border-radius: 30px;
-                    width: 40px;
-                    height: 40px;
-                }
-            }
-        }
-        & .champ-title-score{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding-top: 0.5rem;
-            & h2{
-                font-size: 40px;
-                color: #F51E3C;
-                font-weight: 500;
-                transform: translateY(30px);
-            }
-        }
+      }
     }
-    & .champ-btn-about{
-        display: flex;
-        justify-content: flex-end;
-        align-items: center;
-        padding-right: 1.5rem;
-        & button{
-            border-radius: 11px;
-        }
-        & p{
-            padding-right: 6rem;
-            font-size: 16px;
-        }
+    .ranking {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
     }
-    & .rank{
-        transform: translateY(45px);
-        & .material-symbols-outlined{
-            font-size: 45px;
-        }
-       & span{
-        font-size: 25px;
-       }
-
-    }
-    & .champ-btn-about{
-        display: flex;
-        justify-content: flex-end;
-        align-items: center;
-        padding-right: 1.5rem;
-        & button{
-            border-radius: 11px;
-            margin-left: 1rem;
-        }
-        & p{
-            padding-right: 6rem;
-            font-size: 16px;
-        }
-    }
-    & .no-1{
-        z-index: 100;
-        margin-right: -4rem;
-        margin-top: -9rem;
-        & img{
-            width: 97px;
-            height: 120px;
-        }
-    }
-    & .no-2{
-        z-index: 100;
-        margin-left: -4rem;
-        margin-top: -9rem;
-        & img{
-            width: 97px;
-            height: 120px;
-        }
-    }
+  }
 }
-h1{
-    margin-right: 1rem;
+hr {
+  border: 1.5px solid #b5b5b5;
+  margin-top: 0.5rem;
 }
-.rank{
+.champ-card-ranking {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  border-radius: 30px;
+  margin-top: 1.25rem;
+  & .champ-card-head {
+    width: 660px;
+    background-color: #f9f9fc;
+    border-radius: 30px;
     display: flex;
-    flex-direction: column;
+    overflow: hidden;
+    position: relative;
+    transition: transform 0.5s ease, box-shadow 0.3s ease;
+    cursor: pointer;
+
+    & h1 {
+      padding-left: 3rem;
+    }
+    &:hover {
+      transform: scale(1.05);
+      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+    }
+  }
+  & img {
+    border-radius: 30px;
+    width: 550px;
+    height: 230px;
+    object-fit: cover;
+    aspect-ratio: 16/9;
+  }
+
+  & .champ-card-title {
+    width: 100%;
+    & .champ-icon {
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      margin-top: 0.5rem;
+      margin-right: 1.5rem;
+      & span {
+        font-size: 16px;
+        font-weight: 500;
+        margin-right: 0.5rem;
+      }
+      & img {
+        border-radius: 30px;
+        width: 40px;
+        height: 40px;
+      }
+    }
+  }
+  & .champ-title-score {
+    display: flex;
     justify-content: center;
     align-items: center;
-    width: 60px;
-    height: 60px;
+    padding-top: 0.5rem;
+    & h2 {
+      font-size: 40px;
+      color: #f51e3c;
+      font-weight: 500;
+      transform: translateY(30px);
+    }
+  }
+  & .champ-btn-about {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding-right: 1.5rem;
+    & button {
+      border-radius: 11px;
+    }
+    & p {
+      padding-right: 6rem;
+      font-size: 16px;
+    }
+  }
+  & .rank {
+    transform: translateY(45px);
+    & .material-symbols-outlined {
+      font-size: 45px;
+    }
+    & span {
+      font-size: 25px;
+    }
+  }
+  & .champ-btn-about {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding-right: 1.5rem;
+    & button {
+      border-radius: 11px;
+      margin-left: 1rem;
+    }
+    & p {
+      padding-right: 6rem;
+      font-size: 16px;
+    }
+  }
+  & .no-1 {
+    z-index: 100;
+    margin-right: -4rem;
+    margin-top: -9rem;
+    & img {
+      width: 97px;
+      height: 120px;
+    }
+  }
+  & .no-2 {
+    z-index: 100;
+    margin-left: -4rem;
+    margin-top: -9rem;
+    & img {
+      width: 97px;
+      height: 120px;
+    }
+  }
+}
+h1 {
+  margin-right: 1rem;
+}
+.rank {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 60px;
+  height: 60px;
 }
 .green-arrow {
-    color: green;
-  }
-  
-  .red-arrow {
-    color: red;
-  }
-  .container-rank{
-    width: 100%;
-    height: auto;
+  color: green;
+}
 
-    & .col-7{
-        height: auto;
+.red-arrow {
+  color: red;
+}
+.container-rank {
+  width: 100%;
+  height: auto;
+
+  & .col-7 {
+    height: auto;
+  }
+  & .col-5 {
+    height: auto;
+  }
+}
+.right-card-ranking {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  border-radius: 30px;
+  margin-top: 1.25rem;
+  & .right-card-head {
+    width: 390px;
+    height: 130px;
+    background-color: #f9f9fc;
+    border-radius: 30px;
+    display: flex;
+    overflow: hidden;
+    position: relative;
+    transition: transform 0.5s ease, box-shadow 0.3s ease;
+    cursor: pointer;
+    & h1 {
+      padding-left: 3rem;
     }
-    & .col-5{
-        height: auto;
+    &:hover {
+      transform: scale(1.05);
+      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3); 
     }
   }
-.col-5{
-  & .right-card-ranking{
+  & img {
+    border-radius: 30px;
+    width: 180px;
+    height: 130px;
+    object-fit: cover;
+    aspect-ratio: 16/9;
+  }
+
+  .right-card-title {
+    width: 100%;
+    & .right-icon {
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      margin-top: 0.7rem;
+      margin-right: 1rem;
+      & span {
+        font-size: 14px;
+        font-weight: 500;
+        margin-right: 0.4rem;
+      }
+      & img {
+        border-radius: 30px;
+        width: 30px;
+        height: 30px;
+      }
+    }
+  }
+  & .right-title-score {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    border-radius: 30px;
-    margin-top: 1.25rem;
-    & .right-card-head{
-        width: 390px;
-        height: 130px;
-        background-color: #F9F9FC;
-        border-radius: 30px;
-        display: flex;
-        overflow: hidden;
-        position: relative;
-        transition: transform 0.5s ease, box-shadow 0.3s ease;
-        cursor: pointer;
-
-        & h1{
-            padding-left: 3rem;
-        }
-        &:hover {
-          transform: scale(1.05); // Zoom in effect on hover
-          box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3); // Add shadow on hover
-        }
-
+    padding-top: 0.5rem;
+    & h2 {
+      font-size: 30px;
+      color: #f51e3c;
+      font-weight: 500;
     }
-    & img{
-        border-radius: 30px;
-        width: 180px;
-        height: 130px;
-        object-fit: cover;
-        aspect-ratio: 16/9;
+  }
+  & .right-btn-about {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding-right: 1.5rem;
+    & button {
+      border-radius: 11px;
     }
-
-    & .right-card-title{
-        width: 100%;
-        & .right-icon{
-            display: flex;
-            justify-content: flex-end;
-            align-items: center;
-            margin-top: 0.7rem;
-            margin-right: 1rem;
-            & span{
-                font-size: 14px;
-                font-weight: 500;
-                margin-right: 0.4rem;
-            }
-            & img{
-                border-radius: 30px;
-                width: 30px;
-                height: 30px;
-            }
-        }
+    & p {
+      padding-right: 6rem;
+      font-size: 16px;
     }
-
-    & .right-title-score{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding-top: 0.5rem;
-        & h2{
-            font-size: 30px;
-            color: #F51E3C;
-            font-weight: 500;
-        }
+  }
+  & h1 {
+    font-size: 16px;
+  }
+  & .right-btn-about {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding-right: 1.5rem;
+    margin-top: -0.2rem;
+    & button {
+      border-radius: 11px;
+      width: 18px;
+      height: 28px;
     }
-    & .right-btn-about{
-        display: flex;
-        justify-content: flex-end;
-        align-items: center;
-        padding-right: 1.5rem;
-        & button{
-            border-radius: 11px;
-        }
-        & p{
-            padding-right: 6rem;
-            font-size: 16px;
-    
-        }
+    & p {
+      padding-right: 6rem;
+      font-size: 16px;
     }
-    & h1{
-        font-size: 16px;
+    .right-sumRating {
+      font-size: 14px;
+      margin-right: 1rem;
     }
-    & .right-btn-about{
-        display: flex;
-        justify-content: flex-end;
-        align-items: center;
-        padding-right: 1.5rem;
-        margin-top: -0.2rem;
-        & button{
-            border-radius: 11px;
-            width: 18px;
-            height: 28px;
-        }
-        & p{
-            padding-right: 6rem;
-            font-size: 16px;
-    
-        }
-        .right-sumRating{
-            font-size: 14px;
-            margin-right: 1rem;
-          }
-    }
-}
+  }
 }
