--- a/src/app/components/graph/graph.component.html
+++ b/src/app/components/graph/graph.component.html
@@ -1,7 +1,6 @@
 <div class="container">
     <div class="graph">
-        <canvas id="canvas" width="400" height="400"></canvas>
+      <canvas id="myChart" width="1200" height="600"></canvas>
     </div>
-    
-</div>
-   
+  </div>
+  
