Update all files

--- a/src/app/components/ranking/ranking.component.html
+++ b/src/app/components/ranking/ranking.component.html
@@ -171,7 +171,7 @@
 
     <div class="container-stat" style="width: 100%; margin-top: 2rem;">
       <hr>
-      <div class="stat" style="width: 100%; display: flex; justify-content: center; border: 1px solid red;">
+      <div class="stat" style="width: 100%; display: flex; justify-content: center;">
         <app-graph></app-graph>
       </div>
     </div>
