--- a/src/app/components/ranking/ranking.component.scss
+++ b/src/app/components/ranking/ranking.component.scss
@@ -61,6 +61,9 @@ hr {
   }
 
   & .champ-card-title {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
     width: 100%;
     & .champ-icon {
       display: flex;
@@ -89,44 +92,25 @@ hr {
       font-size: 40px;
       color: #f51e3c;
       font-weight: 500;
-      transform: translateY(30px);
     }
   }
   & .champ-btn-about {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-around;
     align-items: center;
-    padding-right: 1.5rem;
-    & button {
-      border-radius: 11px;
-    }
-    & p {
-      padding-right: 6rem;
-      font-size: 16px;
-    }
   }
-  & .rank {
-    transform: translateY(45px);
-    & .material-symbols-outlined {
+  & .rank{
+    & .material-symbols-outlined{
       font-size: 45px;
     }
-    & span {
-      font-size: 25px;
+    & .text-deltaRank{
+      font-size: 22px;
+      font-weight: 500;
     }
   }
-  & .champ-btn-about {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    padding-right: 1.5rem;
-    & button {
-      border-radius: 11px;
-      margin-left: 1rem;
-    }
-    & p {
-      padding-right: 6rem;
-      font-size: 16px;
-    }
+  & button{
+    width: 28px;
+    border-radius: 11px;
   }
   & .no-1 {
     z-index: 100;
